tests/baselines/reference/checkJsdocParamOnVariableDeclaredFunctionExpression.errors.txt
0.js(14,20): error TS8024: JSDoc '@param' tag has name 's', but there is no parameter with that name.


==== 0.js (1 errors) ====
    // @ts-check
    /**
     * @param {number=} n
     * @param {string} [s]
     */
    var x = function foo(n, s) {}
    var y;
    /**
     * @param {boolean!} b
     */
    y = function bar(b) {}
    
    /**
     * @param {string} s
                       ~
!!! error TS8024: JSDoc '@param' tag has name 's', but there is no parameter with that name.
     */
    var one = function (s) { }, two = function (untyped) { };
    